# aw-watcher-input

./: Makefile  pyproject.toml
aw-watcher-input/: aw-watcher-input.spec
aw-watcher-input/aw_watcher_afk/: __main__.py  afk.py  input.py  listeners.py  unix.py
aw-watcher-input/aw_watcher_input/: __main__.py  config.py  input.py
aw-watcher-input/misc/: aw-watcher-afk.service
aw_watcher_input/: input.py  listeners.py  unix.py
